# Rune-stone

./: .gitignore  AGENTS.md  README.md  SPEC.md
docs/: before-after.md  best-practices.md  examples.md  getting-started.md  integration-agents-md.md  integration-mcp.md  using-skills-with-other-tools.md  workflow.md
examples/basic/: calculate_discount.py  calculate_discount.rune  is_shop_open.py  is_shop_open.rune  validate_email.py  validate_email.rune
examples/full-project/: README.md  REQUIREMENTS.md
examples/full-project/specs/: calculate_order_total.rune  (+2 more)
examples/multi-language/: README.md  slugify.rune
examples/tool-specs/: check_implementation_compliance.rune  create_example_spec.rune  create_rune_spec.rune  enhance_rune_spec.rune  generate_implementation.rune  generate_integration_guide.rune  generate_tests.rune  run_spec_tests.rune  update_readme.rune  validate_rune_spec.rune  validate_spec_structure.rune  verify_implementation.rune
mcp-server/: README.md  __init__.py  __main__.py  parser.py  pyproject.toml  server.py
scripts/: quick_validate.py
skills/: rune-writer.md
skills/rune-diff/: SKILL.md
skills/rune-from-code/: SKILL.md
skills/rune-multi-lang/: SKILL.md
skills/rune-refiner/: SKILL.md
skills/rune-test-generator/: SKILL.md
skills/rune-validator/: SKILL.md
skills/rune-writer/: SKILL.md
templates/: README.md  agent-tool.rune  async-function.rune  basic-function.rune  class-spec.rune  mcp-tool.rune
tests/: test_examples.py  test_parser.py  test_rune_spec.py  test_validator.py
tools/: README.md  validate.py
(+24 files in other folders)
